@@ -78,14 +78,6 @@ extern "C" {
 #define VIPS_META_ICC_NAME "icc-profile-data"
 
 /**
- * VIPS_META_XML:
- *
- * The original XML that was used to code the metadata after reading a VIPS
- * format file.
- */
-#define VIPS_META_XML "xml-header"
-
-/**
  * VIPS_META_IMAGEDESCRIPTION:
  *
  * The IMAGEDESCRIPTION tag. Often has useful metadata. 
